chore(fix): dont cut off checkbox left border

--- a/styles/x-terminal.less
+++ b/styles/x-terminal.less
@@ -122,7 +122,7 @@ x-terminal-profile {
 	.input-checkbox {
 		width: @component-size;
 		height: @component-size;
-		margin-left: -2.25em;
+		margin-left: -2.2em;
 		vertical-align: bottom;
 		position: relative;
 		top: 20px;
